@@ -39,7 +39,45 @@
 ## Java 17 Değişiklikleri
 
 ### Dildeki değişiklikler
-- `switch` ifadeleri için *"pattern matching"* desteği getirildi. <!-- örneksiz anlatmak zor bunu -->
+- `switch` ifadeleri için *"pattern matching"* desteği getirildi. Bu bazı koşullu ifadeleri daha okunaklı hale getirecek bir özellik. Örneğin tipini bilmediğimiz bir nesnenin sayı cinsinden değerini almak için şöyle bir fonksiyon yazabiliriz:  
+  ```java
+  static double getNumberValue(Object o) {
+      double result;
+
+      if (o instanceof Integer) {
+          result = ((Integer) o).doubleValue();
+      } else if (o instanceof Float) {
+          result = ((Float) o).doubleValue();
+      } else if (o instanceof String) {
+          result = Double.parseDouble(((String) o));
+      } else {
+          result = 0;
+      }
+
+      return result;
+  }
+  ```
+  Burada istediğimiz sonuca ulaşmak için her seferinde nesnenin tipini sorgulayıp kullanım sırasında da *type cast* işlemi yapmamız gerekti. (`o.doubleValue()` yerine `((Integer) o).doubleValue()` gibi.)
+
+  Aynı fonksiyonu ***pattern matching*** kullanan `switch` ifadesinden yararlanarak şöyle yazabiliriz:
+  ```java
+  static double getNumberValue_switch(Object o) {
+      return switch (o) {
+          case Integer i -> i.doubleValue();
+          case Float f -> f.doubleValue();
+          case String s -> Double.parseDouble(s);
+          default -> 0;
+      };
+  }
+  ```
+  Burada *type cast* işlemi koşul kontrolünde gerçekleştirildiğinden dolayı nesnenin metotlarını doğrudan çağırabiliyoruz. Ayrıca `switch` ifadesi bir *expression* olduğundan dolayı doğrudan `return` ile kullanılabilir. (JDK 14'ten beri)
+
+  Bu özellik henüz *preview* aşamasında. Hala revize edilmekte ve ileride değişikliğe uğrayabilir. Şu anda bu özelliği kullanan kodu çalıştırmanın yolu derleyiciye *preview* özelliklerini kullanmasını söylemektir:
+  ```sh
+  java --enable-preview --source 17 PatternMatchingDeneme.java
+  ```
+
+
 
 - "Sealed class" kavramı eklendi. Artık bir sınıftan türetilebilecek alt sınıfların hangileri olabileceği belirlenebiriyor.
  
